<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/dialog_title"
        android:textSize="15dp"
        android:text="@string/dialog_title_warning"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/version_warning_preview"
        android:textColor="@color/dialog_title"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/cnoga_support_link"
        android:textColor="@color/dialog_title"
        android:autoLink="web"
        android:textSize="15dp"
        tools:ignore="TextViewEdits" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/version_warning_end"
        android:textColor="@color/dialog_title"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:autoLink="email"
        android:text="@string/cnoga_support_email"
        android:textColor="@color/dialog_title"
        android:textSize="15dp" />


    <TextView
        android:id="@+id/dialog_alert_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical|end"
        android:text="OK"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

</LinearLayout>